(* -*- tuareg -*- *)

let flags = function
  | [] -> ""
  | pkgs ->
    let cmd = "ocamlfind ocamlc -verbose" ^ (
        List.fold_left (fun acc pkg -> acc ^ " -package " ^ pkg) "" pkgs
      ) in
    let ic = Jbuild_plugin.V1.run_and_read_lines
        (cmd ^ " | grep -oEe '-ppx (\"([^\"\\]|\\.)+\"|\\w+)'")
    in
    String.concat " " ic

let rewriters = ["ppx_deriving_rpc"]
let flags = flags rewriters

let () = Printf.ksprintf Jbuild_plugin.V1.send {|
(library
 (name testarossa)
  (flags (:standard -safe-string %s))
  (public_name testarossa)
  (preprocess (pps ppx_deriving_rpc))
  (libraries alcotest-lwt
             astring
             ezjsonm
             ezxmlm
             fmt
             mtime.clock.os
             ipaddr
             logs
             xen-api-client-lwt))
|} flags

