(* -*- tuareg -*- *)

let flags = function
  | [] -> ""
  | pkgs ->
    let cmd = "ocamlfind ocamlc -verbose" ^ (
        List.fold_left (fun acc pkg -> acc ^ " -package " ^ pkg) "" pkgs
      ) in
    let ic = Jbuild_plugin.V1.run_and_read_lines
        (cmd ^ " | grep -oEe '-ppx (\"([^\"\\]|\\.)+\"|\\w+)'")
    in
    String.concat " " ic

let rewriters = ["ppx_deriving_rpc"]
let flags = flags rewriters

let () = Printf.ksprintf Jbuild_plugin.V1.send {|
(executable
 (name main)
  (public_name testarossa_test)
  (flags (:standard -safe-string %s))
  (libraries cmdliner
             fmt.tty
             logs
             logs.cli
             logs.fmt
             ppx_deriving_rpc
             rpclib
             rpclib.json
             rresult
             testarossa))
|} flags
